--- a/my-homepage/package.json
+++ b/my-homepage/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "dotenv": "^16.4.5",
     "nuxt": "^3.12.4",
+    "resend": "^4.0.0",
     "vue": "latest"
   },
   "devDependencies": {
