--- a/my-homepage/package.json
+++ b/my-homepage/package.json
@@ -11,14 +11,20 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@nuxt/fonts": "^0.10.3",
+    "@nuxt/image": "^1.9.0",
     "dotenv": "^16.4.5",
     "nuxt": "^3.12.4",
+    "nuxt-lucide-icons": "^1.0.5",
+    "nuxt-svgo": "^4.0.14",
     "resend": "^4.0.0",
     "vue": "latest"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwindcss": "^3.4.9"
   }
 }
